--- a/index.html
+++ b/index.html
@@ -2,30 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
     <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-  <div class="box">
-    <img src="images/image-product-desktop.jpg" alt="Foto perfume">
-  <div class="texto">
-    <p>PERFUME<p>
-    <h1>Gabrielle Essence Eau De Parfum</h1>
-    <p>A floral, solar and voluptuous interpratation composed by Olivier Polge, Perfume-Creator for the House of CHANEL.</p>
-  <div class="price">
-    <h2>$149,99</h2>
-  <div class="priceold">
-    <h3>$169,99</h3>
+    <div class="container">
+      <div class="box">
+        <img src="images/image-product-desktop.jpg" alt="">
+        <section class="description">
+          <article id="text">
+          <h2>PERFUME</h1>
+          <h1> Gabrielle Essence Eau De Parfum</h1>
+          <p>A floral, solar and voluptous interpratation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL</p>
+            <section class="price">
+              <p>$149,99<span>$169,99</span></p>
+            </section>
+            <div class="bottom">
+              <a href="#"><img src="images/icon-cart.svg" alt=""> Add to Card</a>
+            </div>
+          </article>
+        </section>
+      </div>
   </div>
-  </div>
-    <h4>Add to Cart</h4>
-  </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    Challenger by 
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+     || Coded by <a href="https://github.com/Biocasyle" target="_blank">Ronan Silva</a>
+  </footer>
 </body>
 </html>
